--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="col is-6">
 					<p class="text-name">Gustavo Franco</p>
 					<p class="text-title-company">Realtor</p>
-					<p class="text-title-company">Bolano Home</p>
+					<p class="text-title-company">Bolano Team</p>
 				</div>
 				<div class="col">
 					<img src="https://cdn.sitephotos.sierrastatic.com/2030_logo_bolanohome-white-2021-20210404054753.png" alt="Company Logo">
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:gustavofranco@bolanohome.com">
+		<a href="mailto:gustavofranco@bolanoteam.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">gustavofranco@bolanohome.com</p>
+						<p class="text-detail">gustavofranco@bolanoteam.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
